fix: remove web routes and prefix from api routes
